Changes in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1001,6 +1001,11 @@ img {
     grid-template-columns: repeat(3, 238px);
     justify-content: center;
   }
+
+  .about_info-title,
+  .about_info-name{
+    padding-left: 2.5rem;
+  }
   
   .portfolio_content{
     column-gap: 5rem;
