Qualification section error solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -616,9 +616,9 @@ img {
   display: block;
 }
 
-.qualification_button.qualification_active{
+/* .qualification_button.qualification_active{
   color: var(--first-color);
-}
+} */
 
 /* -----------------------project in mind------------------- */
 .project{
